Archive2/11/62f9fbcb6a48b8/output
main.cpp: In constructor 'Foo::Foo(int)':
main.cpp:12:69: error: no matching function for call to 'bind(void (Foo::*)(size_t*, int), Foo*, size_t [n], int&)'
             threads[i] = std::thread(std::bind(&Foo::bar, this, a, n));
                                                                     ^
main.cpp:12:69: note: candidates are:
In file included from /usr/local/include/c++/4.9.2/thread:39:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/functional:1623:5: note: template<class _Func, class ... _BoundArgs> typename std::_Bind_helper<std::__or_<std::is_integral<typename std::decay<_Tp>::type>, std::is_enum<typename std::decay<_Tp>::type> >::value, _Func, _BoundArgs ...>::type std::bind(_Func&&, _BoundArgs&& ...)
     bind(_Func&& __f, _BoundArgs&&... __args)
     ^
/usr/local/include/c++/4.9.2/functional:1623:5: note:   template argument deduction/substitution failed:
main.cpp:12:69: note:   variable-sized array type 'size_t (&)[n] {aka long unsigned int (&)[n]}' is not a valid template argument
             threads[i] = std::thread(std::bind(&Foo::bar, this, a, n));
                                                                     ^
In file included from /usr/local/include/c++/4.9.2/thread:39:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/functional:1650:5: note: template<class _Result, class _Func, class ... _BoundArgs> typename std::_Bindres_helper<_Result, _Func, _BoundArgs>::type std::bind(_Func&&, _BoundArgs&& ...)
     bind(_Func&& __f, _BoundArgs&&... __args)
     ^
/usr/local/include/c++/4.9.2/functional:1650:5: note:   template argument deduction/substitution failed:
main.cpp:12:69: note:   variable-sized array type 'size_t (&)[n] {aka long unsigned int (&)[n]}' is not a valid template argument
             threads[i] = std::thread(std::bind(&Foo::bar, this, a, n));
                                                                     ^
